--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .idea
-tl/functions/
-tl/types/
-tl/all_tlobjects.py
+telethon/tl/functions/
+telethon/tl/types/
+telethon/tl/all_tlobjects.py
 
 # User session
 *.session
-usermedia/
-api/settings
+telethon/usermedia/
+telethon/api/settings
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
